# crypto

./: .clang-format  CMakeLists.txt  README.md  pyproject.toml
lab01/: analysis.py  caesar.py  main.py
lab01/alphabets/: english.py  russian.py
lab02/: aes.py  main.py  tests.py  vcc.py  vcc_easy.py
lab03/: lab3.ipynb
lab04/: CMakeLists.txt  lab.ipynb  result.json
lab04/src/: lab.cpp  main.cpp  sha256.cpp  sha256.hpp  test.cpp  test.ipynb
lab05/: CMakeLists.txt
lab05/src/: main.cpp
